--- a/app/views/layouts/web/application.html.erb
+++ b/app/views/layouts/web/application.html.erb
@@ -16,8 +16,12 @@
 	<script src="/js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 <body class="<%= @header_img[:body_class] %>">
-<div class="parallax1"></div>
-<div class="parallax2"></div>
+<div class="parallax1">
+	<img class="parallax" src="/img/parallax/parallax1.png">
+</div>
+<div class="parallax2">
+	<img class="parallax" src="/img/parallax/parallax2.png">
+</div>
 
 <div id="wrapper">
 
@@ -30,9 +34,9 @@
 					<li><a href="#" class="service-map"></a></li>
 				</ul>
 				<ul class="select-lang">
-					<li><a href="<%= url_for(locale: :ru) %>" class="lang-rus"></a></li>
-					<li><a href="<%= url_for(locale: :en) %>" class="lang-en"></a></li>
-					<li><a href="<%= url_for(locale: :de) %>" class="lang-de"></a></li>
+					<li><a href="<%= url_for(locale: :ru) %>" class="lang-rus <%= 'active' if locale == :ru %>"></a></li>
+					<li><a href="<%= url_for(locale: :en) %>" class="lang-en <%= 'active' if locale == :en %>"></a></li>
+					<li><a href="<%= url_for(locale: :de) %>" class="lang-de <%= 'active' if locale == :de %>"></a></li>
 				</ul>
 				<ul class="social-networks">
 					<li><a href="<%= Settings.twitter_url %>" target="_blank"><img src="/img/icon-twitter.png" width="8" height="13" alt="" title="" /></a></li>
@@ -69,10 +73,10 @@
 
 <footer id="footer">
 	<div class="wrap">
-		<div class="copyright">Copyright © 2012 II Международная Ассамблея Художников «Пластовская осень»</div>
+		<div class="copyright">Copyright © 2013 II Международная Ассамблея Художников «Пластовская осень»</div>
 		<ul class="footer-logo">
-			<li><a href="#" target="_blank"><img src="/img/logo-footer1.jpg" alt="" title="" width="101" height="67" /></a></li>
-			<li><a href="#" target="_blank"><img src="/img/logo-footer2.png" alt="" title="" width="93" height="78" /></a></li>
+			<li><a href="#" target="_blank"><img src="./img/logo-footer1.jpg" alt="" title="" width="101" height="67" /></a></li>
+			<li><a href="#" target="_blank"><img src="./img/logo-footer2.png" alt="" title="" width="93" height="78" /></a></li>
 		</ul>
 	</div>
 </footer><!-- #footer -->
@@ -80,21 +84,33 @@
 <div class="shadow"></div>
 <div class="pop-up">
 	<div class="pop-up-close"></div>
+	<div class="pop-up-arrow"></div>
 	<div class="left">
-		<img src="/img/gubernator.png" alt="" title="" width="156" height="178" />
+		<img src="./img/gubernator.png" alt="" title="" width="156" height="178" />
 	</div>
 	<div class="pop-up-body">
-		<p><span class="pop-up-quote-left"></span>В этом году Пластовская премия приобрела статус международной,  и стала весомее, и это еще раз подчеркивает наше стремление к культурному сотрудничеству со странами Содружества. Под эгидой «Пластовской осени» на родине мастера собираются  его последователи, чтобы подчеркнуть — пластовские традиции живы и не имеют национальных границ.<span class="pop-up-quote-right"></span></p>
+		<p>
+			<span class="pop-up-quote-left"></span>
+			Ассамблеи художников «Пластовская осень» является одним из центральных событий Международного культурного форума.  Это еще один шаг на пути к популяризации творческого наследия великого живописца, сохранения уникальной творческой среды, которая питала талант Аркадия Пластова.
+			Международная выставка художников «Пластовская осень»  и вручение Пластовской премии решают одну из  важнейших государственных задач - это  сохранение традиций великой русской художественной школы.
+			Пластовская премия приобрела статус международной и стала весомее, и это еще раз подчеркивает наше стремление к культурному сотрудничеству со странами СНГ, Европы и Мира. Под эгидой «Премии Пластова»  на родине мастера собираются его последователи, чтобы подчеркнуть – традиции реалистичного искусства живы и не имеют национальных границ.
+			Убеждены, что премия им.А.А.Пластова может стать своего рода «Нобелевской премией для живописи»
+			<span class="pop-up-quote-right"></span>
+		</p>
 		<footer>Губернатор Ульяновской области:  Сергей Морозов.</footer>
 	</div>
 </div>
 
+
 <script type="text/javascript" src="/js/vendor/jquery-1.8.3.min.js"></script>
 <script type="text/javascript" src="/js/plugins.js"></script>
-<%= javascript_include_tag :defaults,  "nested_form" %>
-<script type="text/javascript" src="/js/jquery.parallax.min.js"></script>
 <script type="text/javascript" src="/js/jquery.jscrollpane.min.js"></script>
 <script type="text/javascript" src="/js/jquery.carouFredSel-6.1.0-packed.js"></script>
+<script type="text/javascript" src="/js/jquery.placeholder.js"></script>
+<script type="text/javascript" src="/js/plax.js"></script>
+<script type="text/javascript" src="/js/cusel-min-2.5.js"></script>
+<script type="text/javascript" src="/js/jquery.ezmark.min.js"></script>
+<script type="text/javascript" src="/js/jgestures.min.js"></script>
 <script type="text/javascript" src="/js/main.js"></script>
 </body>
 </html>
