--- a/app/views/layouts/web/application.html.erb
+++ b/app/views/layouts/web/application.html.erb
@@ -75,8 +75,8 @@
 	<div class="wrap">
 		<div class="copyright">Copyright © 2013 II Международная Ассамблея Художников «Пластовская осень»</div>
 		<ul class="footer-logo">
-			<li><a href="#" target="_blank"><img src="./img/logo-footer1.jpg" alt="" title="" width="101" height="67" /></a></li>
-			<li><a href="#" target="_blank"><img src="./img/logo-footer2.png" alt="" title="" width="93" height="78" /></a></li>
+			<li><a href="#" target="_blank"><img src="/img/logo-footer1.jpg" alt="" title="" width="101" height="67" /></a></li>
+			<li><a href="#" target="_blank"><img src="/img/logo-footer2.png" alt="" title="" width="93" height="78" /></a></li>
 		</ul>
 	</div>
 </footer><!-- #footer -->
@@ -86,7 +86,7 @@
 	<div class="pop-up-close"></div>
 	<div class="pop-up-arrow"></div>
 	<div class="left">
-		<img src="./img/gubernator.png" alt="" title="" width="156" height="178" />
+		<img src="/img/gubernator.png" alt="" title="" width="156" height="178" />
 	</div>
 	<div class="pop-up-body">
 		<p>
