--- a/app/views/web/pages/index.html.erb
+++ b/app/views/web/pages/index.html.erb
@@ -1,44 +1,46 @@
 <%= @page.content.html_safe %>
-
-<%= debug @pictures_group2 %>
 <section class="wrap wrap-laureate">
-	<h1>ЛАУРЕАТЫ 2012 ГОДА</h1>
-	<span class="prev-laureate"></span>
-	<span class="next-laureate"></span>
-	<div class="scroll-pane horizontal-only">
-		<div class="b-wrap-laureate-item">
+  <h1>ЛАУРЕАТЫ 2012 ГОДА</h1>
+  <span class="prev-laureate"></span>
+  <span class="next-laureate"></span>
+  <div class="scroll-pane horizontal-only">
+    <div class="b-wrap-laureate-item">
       <div class="b-laureate-item">
         <% if !@pictures_group1.blank? %>
           <% @pictures_group1.each_with_index do |p, i| %>
+            <% if !p.blank? %>
             <div class="b-laureate b-laureate<%= i + 1 %>">
-    					<div class="b-laureate-frame">
-    						<img src="<%= p.file.url %>" width="139" height="194" alt="" title="" />
-    						<div class="b-laureate-desc">
-    							<span class="b-laureate-desc-author"><%= p.member.fio %>,</span>
-    							<span class="b-laureate-desc-city"><%= p.member.city %></span>
-    							<span class="b-laureate-desc-picture"><%= p.description %></span>
-    						</div>
-    					</div>
-    				</div>      
+              <div class="b-laureate-frame">
+                <img src="<%= p.file.url %>" width="<%= p.width %>" height="<%= p.height %>" alt="" title="" />
+                <div class="b-laureate-desc">
+                  <span class="b-laureate-desc-author"><%= p.member.fio %>,</span>
+                  <span class="b-laureate-desc-city"><%= p.member.city %></span>
+                  <span class="b-laureate-desc-picture"><%= p.description %></span>
+                </div>
+              </div>
+            </div>      
+            <% end %>
           <% end %>
         <% end %>
-			</div>
-			<div class="b-laureate-item">
+      </div>
+      <div class="b-laureate-item">
         <% if !@pictures_group2.blank? %>
           <% @pictures_group2.each_with_index do |p, i| %>
+            <% if !p.blank? %>
             <div class="b-laureate b-laureate<%= i + 1 %>">
-    					<div class="b-laureate-frame">
-    						<img src="<%= p.file.url %>" width="139" height="194" alt="" title="" />
-    						<div class="b-laureate-desc">
-    							<span class="b-laureate-desc-author"><%= p.member.fio %>,</span>
-    							<span class="b-laureate-desc-city"><%= p.member.city %></span>
-    							<span class="b-laureate-desc-picture"><%= p.description %></span>
-    						</div>
-    					</div>
-    				</div>      
+              <div class="b-laureate-frame">
+                <img src="<%= p.file.url %>" width="<%= p.width %>" height="<%= p.height %>" alt="" title="" />
+                <div class="b-laureate-desc">
+                  <span class="b-laureate-desc-author"><%= p.member.fio %>,</span>
+                  <span class="b-laureate-desc-city"><%= p.member.city %></span>
+                  <span class="b-laureate-desc-picture"><%= p.description %></span>
+                </div>
+              </div>
+            </div>      
+            <% end %>
           <% end %>
         <% end %>
-			</div>
-		</div>
-	</div>
+      </div>
+    </div>
+  </div>
 </section>
