--- a/app/views/web/feedback/new.html.erb
+++ b/app/views/web/feedback/new.html.erb
@@ -1,9 +1,13 @@
-<h3><%= flash[:notice] %></h3>
-
-<%= simple_form_for @feed, url: feedback_index_path do |f| %>
-  <%= f.input :email, as: :email %>
-  <%= f.input :phone %>
-  <%= f.input :text, as: :text %>
-  <%= recaptcha_tags %>
-  <%= f.submit %>
-<% end %>
+<section class="wrap-forms">
+  <h3><%= flash[:notice] %></h3>
+  <section class="web-form web-form-register">
+    <h2>Обратная связь</h2>
+    <%= simple_form_for @feed, url: feedback_index_path do |f| %>
+    <%= f.input :email, as: :string, label: false, placeholder: "E-mail", wrapper_html: { class: "form-line" }, input_html: { class: "input-email" } %>
+      <%= f.input :phone, as: :string, label: false, placeholder: "Телефон", wrapper_html: { class: "form-line" }, input_html: { class: "input-phone" } %>
+      <%= f.input :text, as: :text, label: false, placeholder: "Вопрос", wrapper_html: { class: "form-line" }, input_html: { class: "input-name" } %>
+      <%= recaptcha_tags %>
+      <%= f.submit "Отправить", class: "button button-register"  %>
+    <% end %>
+</section>
+</section>
