--- a/app/views/layouts/web/application.html.erb
+++ b/app/views/layouts/web/application.html.erb
@@ -110,7 +110,19 @@
 <script type="text/javascript" src="/js/plax.js"></script>
 <script type="text/javascript" src="/js/cusel-min-2.5.js"></script>
 <script type="text/javascript" src="/js/jquery.ezmark.min.js"></script>
-<script type="text/javascript" src="/js/jgestures.min.js"></script>
+<!-- <script type="text/javascript" src="/js/jgestures.min.js"></script> -->
+
+
+<script type="text/javascript" src="/js/fineuploader/util.js"></script>
+<script type="text/javascript" src="/js/fineuploader/button.js"></script>
+<script type="text/javascript" src="/js/fineuploader/handler.base.js"></script>
+<script type="text/javascript" src="/js/fineuploader/handler.form.js"></script>
+<script type="text/javascript" src="/js/fineuploader/handler.xhr.js"></script>
+<script type="text/javascript" src="/js/fineuploader/uploader.basic.js"></script>
+<script type="text/javascript" src="/js/fineuploader/dnd.js"></script>
+<script type="text/javascript" src="/js/fineuploader/uploader.js"></script>
+<script type="text/javascript" src="/js/fineuploader/jquery-plugin.js"></script>
+
 <script type="text/javascript" src="/js/main.js"></script>
 </body>
 </html>
