--- a/app/views/layouts/web/application.html.erb
+++ b/app/views/layouts/web/application.html.erb
@@ -15,6 +15,7 @@
 	<link rel="stylesheet" href="/css/jquery.fancybox.css">
 	<link rel="stylesheet" href="/css/cusel.css">
 	<link rel="stylesheet" href="/css/fineuploader.css">
+	<link rel="stylesheet" href="/css/ezmark.css">
 	<link rel="stylesheet" href="/css/main.css">
 	<script src="/js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
