fix cache and add unicorn as default server

--- a/app/views/layouts/web/application.html.erb
+++ b/app/views/layouts/web/application.html.erb
@@ -60,9 +60,9 @@
 			<div class="delim"></div>
 			<div class="wrap-main-menu">
 				<nav class="main-menu">
-          <% cache do %>
+          <% # cache do %>
             <%= render_menu id: 1, template: 'web/shared/top_menu' %>
-				  <% end %>
+				  <% # end %>
         </nav>
 				<div class="wrap-sub-menu"></div>
 			</div>
