--- a/app/views/web/news/show.html.haml
+++ b/app/views/web/news/show.html.haml
@@ -1,4 +1,7 @@
 %section.wrap
+  = link_to t("views.news.back_btn"), news_category_path(@news.category_id), style: "float:right"
   %h1= @news.title
   
   = @news.content.html_safe
+  
+  = link_to t("views.news.back_btn"), news_category_path(@news.category_id), style: "float:right"
