--- a/app/views/web/news_categories/show.html.haml
+++ b/app/views/web/news_categories/show.html.haml
@@ -1,5 +1,6 @@
 %section.wrap
   %h1= @category.title
-  
-  - @category.news.published.each do |news|
-    %h3= link_to news.title, news_category_news_path(@category, news)
+
+  .list-news
+    - @category.news.published.each do |news|
+      %h4= link_to news.title, news_category_news_path(@category, news)
