--- a/public/css/main.css
+++ b/public/css/main.css
@@ -153,6 +153,10 @@ h3 {
 
 }
 
+h4 {
+	margin: 0 0 15px;
+}
+
 p {
 	margin: 0 0 15px;
 }
@@ -295,7 +299,7 @@ ul, ol {
 	height: 179px;
 	top: 60px;
 	right: 100px;
-	z-index: 1;
+	z-index: 99;
 }
 
 .parallax2 {
@@ -303,7 +307,7 @@ ul, ol {
 	width: 436px;
 	height: 293px;
 	top: 690px;
-	z-index: 1;
+	z-index: 99;
 	left: -150px;
 }
 
@@ -313,7 +317,7 @@ ul, ol {
 	height: 200px;
 	top: 195px;
 	right: 60px;
-	z-index: 1;
+	z-index: 99;
 }
 
 .blot {
@@ -460,9 +464,33 @@ ul, ol {
 	position: relative;
 }
 
+.page-home .header-middle {
+	top: -30px;
+}
+
+.page-home-en .header-middle {
+	height: 300px;
+	top: -45px;
+	left: -50px;
+}
+
+.page-home-de .header-middle {
+	height: 300px;
+}
+
 .page-news .header-middle {
 	height: 240px;
 	top: -50px;
+}
+
+.page-news-en .header-middle {
+	height: 240px;
+	left: -10px;
+}
+
+.page-news-de .header-middle {
+	height: 240px;
+	top:-65px;
 }
 
 .page-question .header-middle {
@@ -470,8 +498,12 @@ ul, ol {
 	top: -70px;
 }
 
-.page-home .header-middle {
-	top: -30px;
+.page-question-en .header-middle {
+
+}
+
+.page-question-de .header-middle {
+
 }
 
 .page-personal .header-middle {
@@ -480,14 +512,62 @@ ul, ol {
 	left: -34px;
 }
 
+.page-personal-en .header-middle {
+	height: 240px;
+	top: -42px;
+	left: -10px;
+}
+
+.page-personal-de .header-middle {
+	height: 240px;
+	top: -35px;
+	left: -25px;
+}
+
 .page-about .header-middle {
 	height: 240px;
 	top: -13px;
 }
 
+.page-about-en .header-middle {
+	height: 240px;
+	top: -30px;
+	left: -10px;
+}
+
+.page-about-de .header-middle {
+	left: -10px;
+}
+
 .page-participation .header-middle {
 	height: 240px;
 	top: -50px;
+	left: -30px;
+}
+
+.page-participation-en .header-middle {
+	height: 240px;
+}
+
+.page-participation-de .header-middle {
+	height: 240px;
+	top: -27px;
+}
+
+.page-about-award .header-middle {
+	height: 240px;
+	top: -25px;
+	left: -10px;
+}
+
+.page-about-award-en .header-middle {
+	height: 240px;
+	top: -10px;
+}
+
+.page-about-award-de .header-middle {
+	height: 240px;
+	top: -10px;
 	left: -20px;
 }
 
@@ -2238,11 +2318,11 @@ blockquote.blockquote-nas {
 .web-form-load-pictures .jspDrag {
 	background: url(../img/jspDragPhoto.png) no-repeat;
 }
-/*
-.web-form-load-pictures .form-line-load-photo {
-	margin: -20px 0 0 0;
+
+.list-news h4 a {
+	color: #000000;
 }
-*/
+
 /* Footer
 -----------------------------------------------------------------------------*/
 #footer {
