--- a/app/views/web/pages/show.html.haml
+++ b/app/views/web/pages/show.html.haml
@@ -1,5 +1,7 @@
 - if @page.slug != 'award-condition'
   %section.wrap
-    = @page.content.html_safe
+    - if !@page.content.blank?
+      = @page.content.html_safe
 - else
-  = @page.content.html_safe
+  - if !@page.content.blank?
+    = @page.content.html_safe
