--- a/app/views/web/feedback/new.html.erb
+++ b/app/views/web/feedback/new.html.erb
@@ -1,11 +1,16 @@
 <section class="wrap">
   <section class="web-form web-form-register" style="float:none; margin:0 auto;">
-    <h2><%= t("views.feedback.title") %></h2>
-    <%= simple_form_for @feed, url: feedback_index_path do |f| %>
-    <%= f.input :email, as: :string, label: false, placeholder: t("views.feedback.email"), wrapper_html: { class: "form-line" }, input_html: { class: "input-email" } %>
-      <%= f.input :phone, as: :string, label: false, placeholder: t("views.feedback.phone"), wrapper_html: { class: "form-line" }, input_html: { class: "input-phone" } %>
-      <%= f.input :text, as: :text, label: false, placeholder: t("views.feedback.question"), wrapper_html: { class: "form-line" }, input_html: { class: "input-description" } %>
-      <%= f.submit t("views.feedback.send_btn"), class: "button button-register"  %>
+    <% if flash[:notice].blank? %>
+      <h2><%= t("views.feedback.title") %></h2>
+      <%= simple_form_for @feed, url: feedback_index_path do |f| %>
+      <%= f.input :email, as: :string, label: false, placeholder: t("views.feedback.email"), wrapper_html: { class: "form-line" }, input_html: { class: "input-email" } %>
+        <%= f.input :phone, as: :string, label: false, placeholder: t("views.feedback.phone"), wrapper_html: { class: "form-line" }, input_html: { class: "input-phone" } %>
+        <%= f.input :text, as: :text, label: false, placeholder: t("views.feedback.question"), wrapper_html: { class: "form-line" }, input_html: { class: "input-description" } %>
+        <%= f.submit t("views.feedback.send_btn"), class: "button button-register"  %>
+      <% end %>
+    <% else %>
+      <h2><%= flash[:notice] %></h2>
+      <%= link_to t('views.feedback.ask_new_question'), new_feedback_path %>
     <% end %>
 </section>
 </section>
