--- a/app/views/layouts/web/application.html.erb
+++ b/app/views/layouts/web/application.html.erb
@@ -6,7 +6,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<title></title>
+	<title>Plastov Award</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width">
 
@@ -34,8 +34,8 @@
 			<div class="wrap">
 				<ul class="service-menu">
 					<li class="<%= 'active' if current_page?(root_path) %>"><a href="/" class="service-main-page"></a></li>
-					<li><a href="#" class="service-mail"></a></li>
-					<li><a href="#" class="service-map"></a></li>
+					<li><%= link_to '', new_feedback_path, class: 'service-mail' %></li>
+          <!-- <li><a href="#" class="service-map"></a></li> -->
 				</ul>
 				<ul class="select-lang">
 					<li class="<%= 'active' if locale == :ru %>">><a href="<%= url_for(locale: :ru) %>" class="lang-rus <%= 'active' if locale == :ru %>"></a></li>
