--- a/app/views/web/pages/index.html.erb
+++ b/app/views/web/pages/index.html.erb
@@ -1,4 +1,8 @@
-<%= @page.content.html_safe %>
+<% if !@page.content.blank? %>
+  <%= @page.content.html_safe %>
+<% end %>
+
+<% if false %>
 <section class="wrap wrap-laureate">
   <h1>ЛАУРЕАТЫ 2012 ГОДА</h1>
   <span class="prev-laureate"></span>
@@ -48,3 +52,4 @@
     </div>
   </div>
 </section>
+<% end %>
