--- a/app/views/web/shared/_top_menu.html.haml
+++ b/app/views/web/shared/_top_menu.html.haml
@@ -6,7 +6,7 @@
           %span
             = item.name
         %ul
-          - item.children.each do |child|
+          - item.children.order(:position).each do |child|
             %li
               = link_to child.name, page_path(locale: locale, slug: child.slug)
     - else
