--- a/app/views/layouts/web/application.html.erb
+++ b/app/views/layouts/web/application.html.erb
@@ -79,8 +79,8 @@
 	<div class="wrap">
 		<div class="copyright">Copyright © 2013 II Международная Ассамблея Художников «Пластовская осень»</div>
 		<ul class="footer-logo">
-			<li><a href="#" target="_blank"><img src="/img/logo-footer1.jpg" alt="" title="" width="101" height="67" /></a></li>
-			<li><a href="#" target="_blank"><img src="/img/logo-footer2.png" alt="" title="" width="93" height="78" /></a></li>
+			<li><a href="http://www.shr.su/" target="_blank"><img src="/img/logo-footer1.jpg" alt="" title="" width="101" height="67" /></a></li>
+			<li><a href="http://ulgov.ru/" target="_blank"><img src="/img/logo-footer2.png" alt="" title="" width="93" height="78" /></a></li>
 		</ul>
 	</div>
 </footer><!-- #footer -->
@@ -101,7 +101,7 @@
 			Убеждены, что премия им.А.А.Пластова может стать своего рода «Нобелевской премией для живописи»
 			<span class="pop-up-quote-right"></span>
 		</p>
-		<footer>Губернатор Ульяновской области:  Сергей Морозов.</footer>
+		<footer>Губернатор Ульяновской области: Сергей Морозов.</footer>
 	</div>
 </div>
 
