fix news ordering and destroying

--- a/app/views/web/news_categories/show.html.haml
+++ b/app/views/web/news_categories/show.html.haml
@@ -2,5 +2,5 @@
   %h1= @category.title
 
   .list-news
-    - @category.news.published.each do |news|
+    - @category.news.ordered.published.each do |news|
       %h4= link_to news.title, news_category_news_path(@category, news)
