--- a/app/views/layouts/web/application.html.erb
+++ b/app/views/layouts/web/application.html.erb
@@ -8,7 +8,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>Plastov Award</title>
 	<meta name="description" content="">
-	<meta name="viewport" content="initial-scale=1,width=1366">
+	<meta name="viewport" content="initial-scale=1,maximum-scale=1,width=1150">
 
 	<link rel="stylesheet" href="/css/normalize.css">
 	<link rel="stylesheet" href="/css/jquery.jscrollpane.css">
